1.26 - 2014.??.??
-----------------

* MP4:

  * Parse channels/sample_rate/bits_per_sample/bitrate for ALAC files
    :bug:`199` :pr:`5` (Adrian Sampson, Christoph Reiter)

* ASF:

  * Support writing multiple values for
    Author/Title/Copyright/Description/Rating :bug:`151`
  * Various Python3 fixes

* EasyID3: Add more tag mappings :bug:`136` (Ben Ockmore)

* MPC/SV8: Fix parsing of SH packets with padding :bug:`198`

* docs:

  * New logo :pr:`4` (Samuel Messner)
  * Add examples for handling cover art in vorbiscomment :bug:`200`


1.25.1 - 2014.10.13
-------------------

* ID3: Fix parsing of some files with Python 3 :bug:`194`


1.25 - 2014.10.03
-----------------

* Python 3 support (Ben Ockmore et al) :bug:`27`
  Supported: Python 2.6, 2.7, 3.3, 3.4 (CPython and PyPy)
* All custom exceptions now have a common mutagen.MutagenError base class
* mutagen.File: prefer theora over vorbis/flac streams in ogg :bug:`184`
* New mid3cp script for copying id3 tags :bug:`178`
  (Marcus Sundman, Ben Ockmore)

* ID3:

  * Parse 2.3/4 frames with 2.2 names :bug:`177`
  * Try to detect apev2 tags when looking for id3v1 tags :bug:`122`
  * New id3.Encoding, id3.ID3v1SaveOptions enums :bug:`190`

* ASF:

  * Raise a proper exception on invalid utf-16 :bug:`127`

* APEv2:

  * Fix UnicodeDecodeError during parsing :bug:`174`

* MP4:

  * Fix struct.error exception during parsing :bug:`119`
  * New AtomDataType enum for MP4FreeForm.dataformat values
  * Read some previously ignored purl/egit atoms
  * Read multi value reverse DNS tags written by foobar2000
  * Read multi value atoms written by MusicBee :bug:`165`
  * Write back unknown atoms and ones that failed to parse.


1.24 - 2014.08.13
-----------------

* Moved to Bitbucket: https://bitbucket.org/lazka/mutagen
* ID3:

  * Parse utf-16 text frames with wrong termination :bug:`169`
  * Fix parsing of utf-16 SYLT frames :bug:`173`

* WavPack:

  * Fix length calculation if sample count is missing in the header :bug:`180`
